--- a/coding/assets/css/header.css
+++ b/coding/assets/css/header.css
@@ -2,8 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-bottom: 1px solid var(--mainColor);
-
+    /* border-bottom: 1px solid var(--mainColor); */
 }
 
 .header__inner .logo {
@@ -45,6 +44,7 @@
 
 .header__inner .nav ul li a:hover {
     border-bottom: 6px solid var(--pointColor);
+    transition: all 0.3s;
 }
 
 .header__inner .member {}
