--- a/coding/assets/css/style.css
+++ b/coding/assets/css/style.css
@@ -12,7 +12,8 @@
 @import "member.css";
 @import "intro.css";
 @import "board.css";
+@import "main.css";
 /* 로그인 로그아웃 */
 
-/* 외부CSS */
-@import "pumping.css";
+/* 외부CSS  */
+@import "../plugin/slider.css"
