--- a/coding/assets/css/main.css
+++ b/coding/assets/css/main.css
@@ -1,6 +1,6 @@
-* {
+/* * {
     outline: 1px solid red;
-}
+} */
 
 .main__title {
     margin-top: 100px;
@@ -49,13 +49,13 @@
 
 .main_info span {
     font-size: 80px;
-    font-weight: 900;
+    font-weight: 800;
     font-family: var(--fontM);
     color: var(--mainColor);
 }
 
 .main_info ul {
-    margin-top: 100px;
+    margin-top: 40px;
     display: flex;
     justify-content: center;
     margin-bottom: 40px;
@@ -66,12 +66,33 @@
     font-size: 20px;
 }
 
+.main_info ul li.active a {
+    background-color: var(--mainColor);
+    color: var(--white);
+    font-weight: 800;
+}
+
 .main_info ul li a {
-    width: 160px;
+    width: 140px;
     padding: 10px 0;
     display: inline-block;
     border: 1px solid var(--mainColor);
+    font-size: 18px;
     border-radius: 30px;
+}
+
+.main_info ul li a:hover {
+    background-color: var(--mainColor);
+    color: var(--white);
+    font-weight: 800;
+}
+
+@media (max-width: 1000px) {
+    .main_info ul li a {
+        width: 100px;
+        font-size: 16px;
+    }
+
 }
 
 /* main_info_post */
@@ -86,241 +107,28 @@
     flex-wrap: wrap;
 }
 
-.main_info_post .main_post .post1 {
-    width: 410px;
-    height: 768px;
-    margin-right: 14px;
-    display: flex;
-    flex-direction: column;
-    text-align: left;
-    line-height: 1;
-}
-
-.main_info_post .main_post .post1 img {
-    width: 100%;
-    height: 540px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    border-radius: 20px;
-    margin-bottom: 26px;
-}
-
-.main_info_post .main_post .post1 .map {
-    font-size: 14px;
-    color: var(--back500);
-    font-weight: 300;
-    margin-bottom: 10px;
-}
-
-.main_info_post .main_post .post1 .tit {
-    font-size: 24px;
-    color: var(--mainColor);
-    margin-bottom: 10px;
-}
-
-.main_info_post .main_post .post1 .price {
-    font-size: 18px;
-    color: var(--back500);
-    margin-bottom: 10px;
-}
-
-.main_info_post .main_post .post1 .day {
-    font-size: 14px;
-    color: var(--back500);
-    margin-bottom: 100px;
-    font-weight: 300;
-}
-
-.main_info_post .main_post .post2 {
-    width: 410px;
-    height: 768px;
-    margin-right: 14px;
-    display: flex;
-    flex-direction: column;
-    text-align: left;
-    line-height: 1;
-}
-
-.main_info_post .main_post .post2 img {
-    width: 100%;
-    height: 540px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    border-radius: 20px;
-    margin-bottom: 26px;
-}
-
-.main_info_post .main_post .post2 .map {
-    font-size: 14px;
-    color: var(--back500);
-    font-weight: 300;
-    margin-bottom: 10px;
-}
-
-.main_info_post .main_post .post2 .tit {
-    font-size: 24px;
-    color: var(--mainColor);
-    margin-bottom: 10px;
-}
-
-.main_info_post .main_post .post2 .price {
-    font-size: 18px;
-    color: var(--back500);
-    margin-bottom: 10px;
-}
-
-.main_info_post .main_post .post2 .day {
-    font-size: 14px;
-    color: var(--back500);
-    margin-bottom: 100px;
-    font-weight: 300;
-}
-
-.main_info_post .main_post .post3 {
-    width: 410px;
-    height: 768px;
-    display: flex;
-    flex-direction: column;
-    text-align: left;
-    line-height: 1;
-}
-
-.main_info_post .main_post .post3 img {
-    width: 100%;
-    height: 540px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    border-radius: 20px;
-    margin-bottom: 26px;
-}
-
-.main_info_post .main_post .post3 .map {
-    font-size: 14px;
-    color: var(--back500);
-    font-weight: 300;
-    margin-bottom: 10px;
-}
-
-.main_info_post .main_post .post3 .tit {
-    font-size: 24px;
-    color: var(--mainColor);
-    margin-bottom: 10px;
-}
-
-.main_info_post .main_post .post3 .price {
-    font-size: 18px;
-    color: var(--back500);
-    margin-bottom: 10px;
-}
-
-.main_info_post .main_post .post3 .day {
-    font-size: 14px;
-    color: var(--back500);
-    margin-bottom: 100px;
-    font-weight: 300;
-}
-
-.main_info_post .main_post .post4 {
-    width: 410px;
-    height: 768px;
-    margin-right: 14px;
-    display: flex;
-    flex-direction: column;
-    text-align: left;
-    line-height: 1;
-}
-
-.main_info_post .main_post .post4 img {
-    width: 100%;
-    height: 540px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    border-radius: 20px;
-    margin-bottom: 26px;
-}
-
-.main_info_post .main_post .post4 .map {
-    font-size: 14px;
-    color: var(--back500);
-    font-weight: 300;
-    margin-bottom: 10px;
-}
-
-.main_info_post .main_post .post4 .tit {
-    font-size: 24px;
-    color: var(--mainColor);
-    margin-bottom: 10px;
-}
-
-.main_info_post .main_post .post4 .price {
-    font-size: 18px;
-    color: var(--back500);
-    margin-bottom: 10px;
-}
-
-.main_info_post .main_post .post4 .day {
-    font-size: 14px;
-    color: var(--back500);
-    margin-bottom: 100px;
-    font-weight: 300;
-}
-
-.main_info_post .main_post .post5 {
-    width: 410px;
-    height: 768px;
-    margin-right: 14px;
-    display: flex;
-    flex-direction: column;
-    text-align: left;
-    line-height: 1;
-}
-
-.main_info_post .main_post .post5 img {
-    width: 100%;
-    height: 540px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    border-radius: 20px;
-    margin-bottom: 26px;
-}
-
-.main_info_post .main_post .post5 .map {
-    font-size: 14px;
-    color: var(--back500);
-    font-weight: 300;
-    margin-bottom: 10px;
-}
-
-.main_info_post .main_post .post5 .tit {
-    font-size: 24px;
-    color: var(--mainColor);
-    margin-bottom: 10px;
-}
-
-.main_info_post .main_post .post5 .price {
-    font-size: 18px;
-    color: var(--back500);
-    margin-bottom: 10px;
-}
-
-.main_info_post .main_post .post5 .day {
-    font-size: 14px;
-    color: var(--back500);
-    margin-bottom: 100px;
-    font-weight: 300;
-}
-
+.main_info_post .main_post .post1,
+.main_info_post .main_post .post2,
+.main_info_post .main_post .post3,
+.main_info_post .main_post .post4,
+.main_info_post .main_post .post5,
 .main_info_post .main_post .post6 {
-    width: 410px;
-    height: 768px;
+    width: 406px;
+    height: auto;
+    margin-left: 0.6rem;
+    margin-right: 0.125rem;
     display: flex;
     flex-direction: column;
     text-align: left;
     line-height: 1;
 }
 
+.main_info_post .main_post .post1 img,
+.main_info_post .main_post .post2 img,
+.main_info_post .main_post .post3 img,
+.main_info_post .main_post .post4 img,
+.main_info_post .main_post .post5 img,
 .main_info_post .main_post .post6 img {
-    width: 100%;
     height: 540px;
     background-repeat: no-repeat;
     background-size: cover;
@@ -328,6 +136,11 @@
     margin-bottom: 26px;
 }
 
+.main_info_post .main_post .post1 .map,
+.main_info_post .main_post .post2 .map,
+.main_info_post .main_post .post3 .map,
+.main_info_post .main_post .post4 .map,
+.main_info_post .main_post .post5 .map,
 .main_info_post .main_post .post6 .map {
     font-size: 14px;
     color: var(--back500);
@@ -335,28 +148,43 @@
     margin-bottom: 10px;
 }
 
+.main_info_post .main_post .post1 .tit,
+.main_info_post .main_post .post2 .tit,
+.main_info_post .main_post .post3 .tit,
+.main_info_post .main_post .post4 .tit,
+.main_info_post .main_post .post5 .tit,
 .main_info_post .main_post .post6 .tit {
     font-size: 24px;
     color: var(--mainColor);
     margin-bottom: 10px;
 }
 
+.main_info_post .main_post .post1 .price,
+.main_info_post .main_post .post2 .price,
+.main_info_post .main_post .post3 .price,
+.main_info_post .main_post .post4 .price,
+.main_info_post .main_post .post5 .price,
 .main_info_post .main_post .post6 .price {
     font-size: 18px;
     color: var(--back500);
     margin-bottom: 10px;
 }
 
+.main_info_post .main_post .post1 .day,
+.main_info_post .main_post .post2 .day,
+.main_info_post .main_post .post3 .day,
+.main_info_post .main_post .post4 .day,
+.main_info_post .main_post .post5 .day,
 .main_info_post .main_post .post6 .day {
     font-size: 14px;
     color: var(--back500);
-    margin-bottom: 100px;
+    margin-bottom: 60px;
     font-weight: 300;
 }
 
-.main_info_post .pl {
+.main_info_post .pl a {
     display: inline-block;
-    width: 200px;
+    width: 140px;
     padding: 10px 0px 10px 0px;
     font-size: 20px;
     border-radius: 30px;
