--- a/coding/assets/css/media.css
+++ b/coding/assets/css/media.css
@@ -1,66 +1,4 @@
-.header__inner {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    /* border-bottom: 1px solid var(--mainColor); */
-}
-
-.header__inner .logo {
-    width: 100px;
-}
-
-.header__inner .logo a {
-    width: 98px;
-    height: 53px;
-    display: inline-block;
-    background-image: url(../img/WRM-logo.png);
-    /* margin-bottom: 0.625rem;
-    margin-top: 0.625rem; */
-}
-
-
-.header__inner .nav ul {
-    display: flex;
-}
-
-.header__inner .nav ul li {
-    position: relative;
-    margin: 0 2rem;
-    padding: 0 3rem;
-}
-
-.header__inner .nav ul li a {
-    display: inline-block;
-    font-family: var(--fontG);
-    border-bottom: 6px solid transparent;
-    color: var(--mainColor);
-    font-weight: 300;
-}
-
-.header__inner .nav ul li.active a {
-    border-bottom: 6px solid var(--pointColor);
-    font-weight: 600;
-}
-
-.header__inner .nav ul li a:hover {
-    border-bottom: 6px solid var(--pointColor);
-    transition: all 0.3s;
-}
-
-
-.header__inner .member ul {
-    display: flex;
-    font-size: 14px;
-}
-
-.header__inner .member ul li a {
-    padding: 5px;
-    margin-right: 6px;
-    display: inline-block;
-    font-family: var(--fontG);
-    color: var(--mainColor);
-}
-
+/* header 반응형 */
 @media (max-width: 1000px) {
     .header__inner .nav ul li {
         margin: 0 2rem;
@@ -89,7 +27,6 @@
         padding: 0 0.1rem;
         margin-right: 0.1rem;
     }
-
 
     .header__inner .logo {
         width: 70px;
@@ -239,5 +176,46 @@
         background-position: center center;
         margin: 0;
         padding: 0;
+    }
+}
+
+/* //header 반응형 끝 */
+
+/* main_post 반응형 */
+
+
+/* footer 반응형 */
+@media (max-width: 1000px) {
+
+    .footer-logo {
+        margin-left: 44%;
+    }
+}
+
+@media (max-width: 600px) {
+
+    .footer-logo {
+        margin-top: 1rem;
+        margin-bottom: 0rem;
+        width: 60px;
+        height: 40px;
+    }
+
+    .footer2 {
+        margin-bottom: 0.625rem;
+    }
+
+    .footer2 ul li a {
+        padding: 0;
+        font-size: 8px;
+    }
+
+    .footer3 {
+        margin-bottom: 0.625rem;
+    }
+
+    .footer3 ul li a {
+        padding: 0;
+        font-size: 6px;
     }
 }
