--- a/coding/assets/css/footer.css
+++ b/coding/assets/css/footer.css
@@ -1,18 +1,18 @@
 #footer {
-    background-color: var(--black100);
+    background-color: var(--white);
     height: auto;
 }
 
 #footer hr {
     margin-top: 10px;
     margin-bottom: 20px;
-    border-color: #717171;
+    border-color: var(--mainColor);
 }
 
 #footer p.maile {
     font-size: 10px;
     padding-bottom: 60px;
-    color: var(--black700);
+    color: var(--mainColor);
 }
 
 .footer__lnner {
@@ -37,7 +37,7 @@
 .footer__lnner .left ul>li>a {
     display: inline-block;
     font-size: 14px;
-    color: var(--white);
+    color: var(--mainColor);
 }
 
 .footer__lnner .left ul>li>ul {
@@ -47,7 +47,7 @@
 .footer__lnner .left ul>li>ul>li>a {
     margin: 12px 0;
     font-size: 12px;
-    color: var(--black700);
+    color: var(--mainColor);
 }
 
 .footer__lnner .left ul li ul .footer__lnner .right {
@@ -57,7 +57,7 @@
 
 .footer__bot p.copy {
     font-size: 12px;
-    color: #3a3a3a;
+    color: var(--mainColor)
 }
 
 .footer__bot {
@@ -92,7 +92,7 @@
 
 .footer__bot .right_bot ul li a {
     font-size: 10px;
-    color: var(--white);
+    color: var(--mainColor);
 }
 
 .footer__bot .right_bot ul li:last-child {
@@ -113,7 +113,7 @@
     display: inline-block;
     width: 25px;
     height: 25px;
-    background-color: #d9d9d9;
+    background-color: var(--mainColor);
     border-radius: 50%;
     background-image: url(../img/sns-discord.svg);
     background-position: center;
