--- a/coding/assets/css/vars.css
+++ b/coding/assets/css/vars.css
@@ -3,8 +3,9 @@
     --fontG: "GmarketSans";
     --fontM: "Montserrat";
 
-    --mainColor: #186ffb;
-    --pointColor: #46ff85;
+    --mainColor: #ff4409;
+    --pointColor: #f7e1cd;
+    --backgroundColor: #FBF1E7;
 
     --white: #fff;
     --white100: #fff;
