--- a/coding/assets/css/main.css
+++ b/coding/assets/css/main.css
@@ -138,6 +138,7 @@ main__banner
 .main__info .container {
     margin-top: 11.25rem;
     width: 1100px;
+    text-align: center;
 }
 
 .main__info .container>h3 {
@@ -169,6 +170,7 @@ main__banner
     flex-direction: column;
     border-radius: 20px;
     margin-right: 20px;
+    margin-bottom: 80px;
 }
 
 .main__info .container .main__post .post1>img,
@@ -196,6 +198,7 @@ main__banner
     font-size: 20px;
     margin-left: 10px;
     color: var(--mainColor);
+    font-weight: 800;
 }
 
 .main__post .post1 .pip,
@@ -286,6 +289,7 @@ main__banner
     margin-left: 10px;
     font-size: 20px;
     color: var(--mainColor);
+    font-weight: 800;
 }
 
 .main__post2 .post4 .pip,
@@ -342,7 +346,7 @@ main__banner
     background-color: var(--white);
     border: 1px solid var(--mainColor);
     color: var(--mainColor);
-    border-radius: 20px;
+    border-radius: 30px;
     font-size: 20px;
 }
 
@@ -372,6 +376,7 @@ main__banner
 
 .main__rank .container {
     width: 1100px;
+    text-align: center;
 }
 
 .main__rank .container>h4 {
@@ -444,6 +449,7 @@ main__banner
     font-size: 20px;
     color: var(--mainColor);
     margin-left: 10px;
+    font-weight: 800;
 }
 
 .main__rank__post .rank1 .pip,
@@ -498,6 +504,7 @@ main__banner
 
 .main__crew .container {
     width: 1100px;
+    text-align: center;
 }
 
 .main__crew .container>h5 {
@@ -647,4 +654,8 @@ main__banner
 .main__mooto .box1 .box1-2 .box1-2-1 {
     width: 100%;
     height: 82%;
+}
+
+.main__mooto .box1 .box1-2>img {
+    width: 60%;
 }
