--- a/coding/assets/css/main.css
+++ b/coding/assets/css/main.css
@@ -617,7 +617,6 @@ main__banner
 
 .main__motto .box1 .box1-1 {
     width: 50%;
-    margin-right: 30px;
 }
 
 .main__motto .box1 .box1-1-1 {
@@ -650,12 +649,65 @@ main__banner
     width: 60%;
 }
 
-
-.main__mooto .box1 .box1-2 .box1-2-1 {
-    width: 100%;
-    height: 82%;
+.main__motto .box1 .box1-2 {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 }
 
-.main__mooto .box1 .box1-2>img {
-    width: 60%;
+.main__motto .box1 .box1-2>img {
+    height: 80%;
+}
+
+.main__motto .box1 .box1-2>p {
+    text-align: left;
+    margin-right: 30px;
+    margin-top: 20px;
+    color: var(--white);
+    line-height: 2;
+}
+
+.main__motto .box2 {
+    display: flex;
+}
+
+.main__motto .box2 .box2-1 {
+    width: 374px;
+    height: 560px;
+    margin-right: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    text-align: left;
+}
+
+.main__motto .box2 .box2-2 {
+    width: 374px;
+    height: 560px;
+    margin-top: 200px;
+    margin-right: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    text-align: left;
+}
+
+.main__motto .box2 .box2-3 {
+    width: 374px;
+    height: 560px;
+    margin-top: 400px;
+
+}
+
+.main__motto .box2 .box2-1>img,
+.main__motto .box2 .box2-2>img,
+.main__motto .box2 .box2-3>img {
+    border-radius: 20px;
+}
+
+.main__motto .box2 .box2-1>p,
+.main__motto .box2 .box2-2>p {
+    color: var(--white);
+    margin-top: 20px;
+    font-size: 14px;
 }
