--- a/coding/assets/css/main.css
+++ b/coding/assets/css/main.css
@@ -414,7 +414,7 @@ main__banner
 
 .main__rank .container .main__rank__post .rank1::after {
     content: '1';
-    background-image: url(../img/rank.svg);
+    background-image: url(../ico/wrm__ranking.svg);
     border: none;
     width: 72px;
     height: 120px;
@@ -598,28 +598,32 @@ main__banner
 
 /* //main__crew */
 
-.main__motto {
+#main__motto {
     background-color: var(--mainColor);
     padding-top: 200px;
     text-align: center;
 }
 
-.main__motto .container>img {
+#main__motto .container {
+    padding-bottom: 200px;
+}
+
+#main__motto .container>img {
     width: 60%;
     margin-bottom: 60px;
 }
 
-.main__motto .box1 {
+#main__motto .box1 {
     width: 100%;
     height: 100%;
     display: flex;
 }
 
-.main__motto .box1 .box1-1 {
+#main__motto .box1 .box1-1 {
     width: 50%;
 }
 
-.main__motto .box1 .box1-1-1 {
+#main__motto .box1 .box1-1-1 {
     background-color: #fff;
     height: 30%;
     display: flex;
@@ -628,14 +632,14 @@ main__banner
     border-radius: 20px;
 }
 
-.main__motto .box1 .box1-1-1>p {
+#main__motto .box1 .box1-1-1>p {
     font-size: 40px;
     color: var(--mainColor);
     font-family: var(--fontG);
     font-weight: 800;
 }
 
-.main__motto .box1 .box1-1-2 {
+#main__motto .box1 .box1-1-2 {
     margin-top: 25px;
     height: 46%;
     background-color: var(--backgroundColor);
@@ -645,21 +649,21 @@ main__banner
     align-items: center;
 }
 
-.main__motto .box1 .box1-1-2>img {
+#main__motto .box1 .box1-1-2>img {
     width: 60%;
 }
 
-.main__motto .box1 .box1-2 {
+#main__motto .box1 .box1-2 {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
 }
 
-.main__motto .box1 .box1-2>img {
+#main__motto .box1 .box1-2>img {
     height: 80%;
 }
 
-.main__motto .box1 .box1-2>p {
+#main__motto .box1 .box1-2>p {
     text-align: left;
     margin-right: 30px;
     margin-top: 20px;
@@ -667,11 +671,12 @@ main__banner
     line-height: 2;
 }
 
-.main__motto .box2 {
+#main__motto .box2 {
     display: flex;
+    padding: 40px;
 }
 
-.main__motto .box2 .box2-1 {
+#main__motto .box2 .box2-1 {
     width: 374px;
     height: 560px;
     margin-right: 20px;
@@ -681,7 +686,7 @@ main__banner
     text-align: left;
 }
 
-.main__motto .box2 .box2-2 {
+#main__motto .box2 .box2-2 {
     width: 374px;
     height: 560px;
     margin-top: 200px;
@@ -692,22 +697,78 @@ main__banner
     text-align: left;
 }
 
-.main__motto .box2 .box2-3 {
+#main__motto .box2 .box2-3 {
     width: 374px;
     height: 560px;
     margin-top: 400px;
-
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    text-align: left;
 }
 
-.main__motto .box2 .box2-1>img,
-.main__motto .box2 .box2-2>img,
-.main__motto .box2 .box2-3>img {
+#main__motto .box2 .box2-1>img,
+#main__motto .box2 .box2-2>img,
+#main__motto .box2 .box2-3>img {
     border-radius: 20px;
 }
 
-.main__motto .box2 .box2-1>p,
-.main__motto .box2 .box2-2>p {
+#main__motto .box2 .box2-1>p,
+#main__motto .box2 .box2-2>p,
+#main__motto .box2 .box2-3>p {
     color: var(--white);
     margin-top: 20px;
     font-size: 14px;
+}
+
+#main__motto .box3 {
+    width: 800px;
+    height: 430px;
+    background-color: var(--backgroundColor);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#main__motto .box3>img {
+    width: 646px;
+    height: 312px;
+}
+
+.main__goal {
+    margin-top: 150px;
+    text-align: center;
+}
+
+.main__goal .container>h6 {
+    font-size: 46px;
+    font-weight: 900;
+    font-family: var(--fontG);
+    color: var(--mainColor);
+}
+
+.main__goal .container>p {
+    font-size: 20px;
+    margin-top: 20px;
+    color: var(--mainColor);
+}
+
+.main__goal .goal__box {
+    margin-top: 80px;
+}
+
+.cover {
+    width: 100vw;
+    margin-bottom: 10rem;
+    display: flex;
+    margin-top: 10vh;
+    transform: rotate(-6deg);
+    background-color: var(--mainColor);
+}
+
+.cover>p {
+    font-size: 5vw;
+    font-weight: 400;
+    color: var(--white);
+    font-family: var(--fontG);
 }
