--- a/coding/assets/css/style.css
+++ b/coding/assets/css/style.css
@@ -14,6 +14,8 @@
 @import "board.css";
 @import "main.css";
 @import "media.css";
+@import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
+
 /* 로그인 로그아웃 */
 
 /* 외부CSS  */
