--- a/coding/assets/css/vars.css
+++ b/coding/assets/css/vars.css
@@ -2,6 +2,7 @@
     --fontN: "NanumSquareNeo";
     --fontG: "GmarketSans";
     --fontM: "Montserrat";
+    --fontP: "Pacifico";
 
     --mainColor: #ff4409;
     --pointColor: #f7e1cd;
